# umami-mcp

./: .gitignore  README.md  pyproject.toml  server.py
umami_mcp/: __main__.py  server.py
